WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282855
Unreviewed, another macOS build fix after
286359@main
https://bugs.webkit.org/show_bug.cgi?id=282855
Summary
Unreviewed, another macOS build fix after 286359@main
Chris Dumez
Reported
2024-11-08 15:19:44 PST
Build fix after
286359@main
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-11-08 15:19:57 PST
<
rdar://problem/139540294
>
Chris Dumez
Comment 2
2024-11-08 15:20:56 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36421
EWS
Comment 3
2024-11-08 16:03:54 PST
Committed
286365@main
(0c235bb290d3): <
https://commits.webkit.org/286365@main
> Reviewed commits have been landed. Closing PR #36421 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug