Unreviewed, another macOS build fix after 286359@main https://bugs.webkit.org/show_bug.cgi?id=282855 rdar://139540294

* Source/JavaScriptCore/interpreter/Interpreter.cpp:
(JSC::loadVarargs):

Canonical link: https://commits.webkit.org/286365@main